# codeflix

api/: README.md  (+3 more)
backend/python/: .coverage  .gitignore  .pdm-python  .pylintrc  Dockerfile  Makefile  README.md  app.py  category.py  docker-compose.yaml  manage.py  pyproject.toml  pytest.ini  test_category.py
backend/python/.devcontainer/: devcontainer.json
backend/python/src/__seedwork/domain/: entities.py  exceptions.py  repositories.py  validators.py  value_object.py  value_objects.py
backend/python/src/__seedwork/tests/integration/domain/: test_init_validators.py
backend/python/src/__seedwork/tests/unit/domain/: test_unit_entities.py  test_unit_repositories.py  test_unit_validators.py  test_unit_value_object.py
backend/python/src/category/domain/: entities.py  validators.py
backend/python/src/category/infra/: repositories.py
backend/python/src/core/category/application/: category_repository.py
backend/python/src/core/category/domain/: category.py  category_repository.py
backend/python/src/core/genre/domain/: genre.py  genre_repository.py
backend/python/src/django_project/: settings.py  urls.py
backend/python/src/django_project/category_app/: apps.py  models.py  repository.py  serializers.py  views.py
backend/python/src/django_project/category_app/migrations/: 0001_initial.py  0002_alter_category_description_alter_category_id.py
backend/python/src/django_project/category_app/tests/: test_category_api.py  test_repository.py  test_views.py  tests_category_api.py
backend/python/src/test_e2e/: test_user_can_create_and_edit_category.py
(+149 files in other folders)
