[project]
name = "python"
version = "0.1.0"
description = "Default template for PDM package"
authors = [{ name = "André Junior", email = "andrejunior179@gmail.com" }]
dependencies = [
    "djangorestframework>=3.14.0",
]
requires-python = "==3.11.*"
readme = "README.md"
license = { text = "MIT" }

[tool.pdm]
package-type = "application"

[tool.pdm.dev-dependencies]
dev = ["pytest>=7.4.3", "coverage>=7.3.3"]
